--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ body, h1, h2, p, ul, li, a {
 
 body {
     font-family: "Open Sans", Helvetica, Arial, sans-serif;
-    color: #141414;
-
+    background-color: var(--bg-color);
+    color: var(--text-color);
 }
 
 ul {
@@ -102,7 +102,7 @@ img {
     padding: 60px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: center
 }
 
 .sobre-info {
@@ -126,15 +126,18 @@ img {
     height: 200px;
     width: 300px;
     flex: 1 1 160px;
+    border-radius: 10px;
+    margin: 10px;
 }
 
 /*maiseconomicos*/
 .maiseconomicos {
     max-width: 1300px;
-    margin: 60px;
+    margin: 0 auto;
+    padding: 60px 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: center
 }
 
 .maiseconomicos h1 {
@@ -165,7 +168,6 @@ img {
 
 /*Preços*/
 .preco {
-    background: #f7f7f7;
     padding: 60px;
     display: flex;
     flex-wrap: wrap;
@@ -174,14 +176,13 @@ img {
 
 .preco-item {
     flex: 1;
-    border: 4px solid white;
     padding: 20px;
     margin: 10px;
+    min-width: 260px;
 }
 
 .preco-item h2 {
     font-size: 3em;
-    color: #a4a4a4;
     text-align: center;
     margin-top: 20px;
 }
@@ -193,9 +194,7 @@ img {
     font-size: 3em;
     text-align: center;
     font-weight: bold;
-    padding: 10px 0 5px; 
-    border-top: 4px solid white;
-    border-bottom: 4px solid white;
+    padding: 10px 0 5px 0; 
 }
 
 .preco-item sup {
@@ -207,13 +206,145 @@ img {
     margin: 20px auto;
     font-size: 1.25em;
     font-style: italic;
-    line-height: 2;
-    color: #7c7c7c;
 }
 
-.preco-item li::after {
+.preco-item li {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.preco-item li::before {
     content: '';
     display: block;
     width: 6px;
     height: 6px;
+    border-radius: 50%;
+    margin-right: 5px;
+}
+
+.preco-item a {
+    max-width: 300px;
+    display: block;
+    margin: 20px auto;
+    border: 4px solid;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 2.25em;
+    padding: 15px 0;
+    text-align: center;
+}
+
+/*Mobile*/
+@media (max-width: 800px) {
+    .preco {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    .preco .preco-item:nth-child(3) {
+        order: -2;
+    }
+    .preco .preco-item:nth-child(2) {
+        order: -1;
+    }
+}
+
+/*Cards*/
+
+.cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    padding: 2rem;
+}
+
+.card {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 2rem;
+    border-radius: 8px;
+    width: 300px;
+}
+
+.card>img {
+    width: 100%;
+    border-radius: 8px;
+}
+
+.card p {
+    font-size: 20px;
+}
+
+/*Newsletter*/
+
+.newsletter {
+    padding: 60px calc(100% -1300) / 2;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.newsletter-info {
+    flex: 1 1 240;
+    margin: 0 10px;
+}
+
+.newsletter-info h1{
+    font-size: 3em;
+}
+
+.newsletter-info p {
+    font-size: 1.25em;
+    font-style: italic;
+    max-width: 230px;
+    margin-bottom: 10px;
+}
+
+.newsletter-form {
+    flex: 2 1 260px;
+    margin: 0 10px;
+    align-self: center;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.newsletter-form input {
+    flex: 3 1 260px;
+    font-size: 1.25em;
+    font-style: italic;
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    padding: 10px;
+    margin: 0px;
+    border-radius: 0px;
+}
+
+.newsletter-form button {
+    flex: 1 1 200px;
+    font-family: "Open Sans", Helvetica, Arial, sans-serif;
+    font-size: 2.25em;
+    font-weight: bold;
+    text-transform: uppercase;
+    cursor: pointer;
+    border: 0px;
+    padding: 15px 10px;
+}
+
+@media (max-width: 600px){
+    .newsletter-form button{
+        font-size: 1.5em;
+    }
+}
+
+/*Footer*/
+
+.footer {
+    display: flex;
+    height: 200px;
+    align-items: center;
+}
+
+.footer p {
+    flex: 1;
+    text-align: center;
+    font-size: 2.25em;
 }
